fix(sidebar): change collapser animation

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -75,17 +75,31 @@
             {
                 background: $color-gray-700 !important;
                 border: none !important;
-                margin-left: 0.25rem;
-
-                &:hover
-                {
-                    background: $color-gray-600 !important;
-                }
+                height: 1rem !important;
+                width: 3rem !important;
+                transition: all 0.5s;
 
                 &:focus
                 {
                     box-shadow: none !important;
                 }
+
+                &:hover
+                {
+                    
+                }
+
+                &.collapsed
+                {
+                    transform: rotate(0);
+                }
+                
+                &.expanded
+                {
+                    transform: rotate(180deg);
+                }
+
+
             }
         }
 
